# src/Controller/MerchantMapController.php
@@ -166,8 +166,12 @@ final class MerchantMapController extends AbstractController
                 'address' => $merchant->getAddress(),
                 'postal_code' => $merchant->getPostalCode(),
                 'city' => $merchant->getCity(),
+                'establishment_type' => $merchant->getEstablishmentType()?->getCode(),
                 'phone' => $merchant->getPhone(),
                 'logo_url' => $merchant->getLogoUrl(),
+                'instagram_url' => $merchant->getInstagramUrl(),
+                'tiktok_url' => $merchant->getTiktokUrl(),
+                'website_url' => $merchant->getWebsiteUrl(),
                 'latitude' => $merchant->getLatitude(),
                 'longitude' => $merchant->getLongitude(),
                 'distance_km' => $row['distance_km'],
@@ -252,6 +256,7 @@ final class MerchantMapController extends AbstractController
                 'address' => $row['address'],
                 'postal_code' => $row['postal_code'],
                 'city' => $row['city'],
+                'establishment_type' => $merchantEntity?->getEstablishmentType()?->getCode(),
                 'latitude' => $row['latitude'],
                 'longitude' => $row['longitude'],
                 'distance_km' => $row['distance_km'],
